server/src/antlr/grammer/siParser.ts
// Generated from siParser.g4 by ANTLR 4.7.3-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { siParserListener } from "./siParserListener";

export class siParser extends Parser {
	public static readonly BLOCK_COMMENT = 1;
	public static readonly LINE_COMMENT = 2;
	public static readonly WHITE_SPACE = 3;
	public static readonly ALL = 4;
	public static readonly ANSICHAR = 5;
	public static readonly AS = 6;
	public static readonly AUTOTIMESTAMP = 7;
	public static readonly BIGIDENTITY = 8;
	public static readonly BIGSEQUENCE = 9;
	public static readonly BIGXML = 10;
	public static readonly BLOB = 11;
	public static readonly BOOLEAN = 12;
	public static readonly BULKINSERT = 13;
	public static readonly BULKUPDATE = 14;
	public static readonly BYTE = 15;
	public static readonly CALC = 16;
	public static readonly CASCADE = 17;
	public static readonly CHAR = 18;
	public static readonly CHECK = 19;
	public static readonly COUNT = 20;
	public static readonly CONST = 21;
	public static readonly CURSOR = 22;
	public static readonly DATABASE = 23;
	public static readonly DATE = 24;
	public static readonly DATETIME = 25;
	public static readonly DECLARE = 26;
	public static readonly DEFAULTV = 27;
	public static readonly DELETE = 28;
	public static readonly DELETEBY = 29;
	public static readonly DELETEALL = 30;
	public static readonly DELETEONE = 31;
	public static readonly DESC = 32;
	public static readonly DOUBLE = 33;
	public static readonly DYNAMIC = 34;
	public static readonly EXECUTE = 35;
	public static readonly EXISTS = 36;
	public static readonly FLAGS = 37;
	public static readonly FLOAT = 38;
	public static readonly FOR = 39;
	public static readonly GRANT = 40;
	public static readonly IDENTITY = 41;
	public static readonly IMPORT = 42;
	public static readonly IN = 43;
	public static readonly INOUT = 44;
	public static readonly INPUT = 45;
	public static readonly INSERT = 46;
	public static readonly INT = 47;
	public static readonly KEY = 48;
	public static readonly LINK = 49;
	public static readonly LONG = 50;
	public static readonly MERGE = 51;
	public static readonly MONEY = 52;
	public static readonly MULTIPLE = 53;
	public static readonly NAMES = 54;
	public static readonly NOT = 55;
	public static readonly NULL = 56;
	public static readonly OPTIONS = 57;
	public static readonly ORDER = 58;
	public static readonly OUTPUT = 59;
	public static readonly PACKAGE = 60;
	public static readonly PASSWORD = 61;
	public static readonly PRIMARY = 62;
	public static readonly PROC = 63;
	public static readonly READONLY = 64;
	public static readonly RETURNING = 65;
	public static readonly SCHEMA = 66;
	public static readonly SELECT = 67;
	public static readonly SELECTALL = 68;
	public static readonly SELECTBY = 69;
	public static readonly FROM = 70;
	public static readonly WHERE = 71;
	public static readonly SELECTONEBY = 72;
	public static readonly SELECTONE = 73;
	public static readonly SEQUENCE = 74;
	public static readonly SERVER = 75;
	public static readonly SHORT = 76;
	public static readonly SINGLE = 77;
	public static readonly SQL = 78;
	public static readonly SPROC = 79;
	public static readonly STANDARD = 80;
	public static readonly TABLE = 81;
	public static readonly TIME = 82;
	public static readonly TIMESTAMP = 83;
	public static readonly TLOB = 84;
	public static readonly TO = 85;
	public static readonly UID = 86;
	public static readonly UNIQUE = 87;
	public static readonly UPDATE = 88;
	public static readonly UPDATEFOR = 89;
	public static readonly UPDATEBY = 90;
	public static readonly MAXTMSTAMP = 91;
	public static readonly USERID = 92;
	public static readonly USERSTAMP = 93;
	public static readonly UTF8 = 94;
	public static readonly VIEW = 95;
	public static readonly WANSICHAR = 96;
	public static readonly WCHAR = 97;
	public static readonly XML = 98;
	public static readonly PARM = 99;
	public static readonly PARMSHOWS = 100;
	public static readonly PARMVIEWONLY = 101;
	public static readonly PARMCACHE = 102;
	public static readonly PARMREADER = 103;
	public static readonly PARMINSERT = 104;
	public static readonly PARMDELETE = 105;
	public static readonly PARMUPDATE = 106;
	public static readonly PARMSUPPLIED = 107;
	public static readonly COMMENT = 108;
	public static readonly ATSIGN = 109;
	public static readonly COLON = 110;
	public static readonly COMMA = 111;
	public static readonly EQUALS = 112;
	public static readonly LEFTBRACE = 113;
	public static readonly LEFTBRACK = 114;
	public static readonly LEFTPAREN = 115;
	public static readonly RIGHTBRACE = 116;
	public static readonly RIGHTBRACK = 117;
	public static readonly RIGHTPAREN = 118;
	public static readonly SEMICOLON = 119;
	public static readonly NUMBER = 120;
	public static readonly STRING = 121;
	public static readonly DQUOTEDS = 122;
	public static readonly SQUOTEDS = 123;
	public static readonly IDENTIFIER = 124;
	public static readonly LIDENTIFIER = 125;
	public static readonly LETTER = 126;
	public static readonly DIGIT = 127;
	public static readonly EXTRA = 128;
	public static readonly LITERAL = 129;
	public static readonly POINT = 130;
	public static readonly SQLCODE = 131;
	public static readonly SQLDATA = 132;
	public static readonly IDLCODE = 133;
	public static readonly CODE = 134;
	public static readonly DATA = 135;
	public static readonly ENDCODE = 136;
	public static readonly ENDDATA = 137;
	public static readonly CODELINE = 138;
	public static readonly RULE_jInput = 0;
	public static readonly RULE_jConnect = 1;
	public static readonly RULE_jPackageIdent = 2;
	public static readonly RULE_jIdentOrString = 3;
	public static readonly RULE_jIdent = 4;
	public static readonly RULE_jTables = 5;
	public static readonly RULE_jTableImport = 6;
	public static readonly RULE_jTable = 7;
	public static readonly RULE_jPackageField = 8;
	public static readonly RULE_jField = 9;
	public static readonly RULE_jAlias = 10;
	public static readonly RULE_jDatatype = 11;
	public static readonly RULE_jLookup = 12;
	public static readonly RULE_jEnumValue = 13;
	public static readonly RULE_jFloatsize = 14;
	public static readonly RULE_jEnumChar = 15;
	public static readonly RULE_jCharsize = 16;
	public static readonly RULE_jCharList = 17;
	public static readonly RULE_jNumber = 18;
	public static readonly RULE_jParm = 19;
	public static readonly RULE_jExtras = 20;
	public static readonly RULE_jConst = 21;
	public static readonly RULE_jGrant = 22;
	public static readonly RULE_jPermission = 23;
	public static readonly RULE_jUser = 24;
	public static readonly RULE_jKey = 25;
	public static readonly RULE_jModifier = 26;
	public static readonly RULE_jColumn = 27;
	public static readonly RULE_jLink = 28;
	public static readonly RULE_jLinkColumn = 29;
	public static readonly RULE_jView = 30;
	public static readonly RULE_jViewAlias = 31;
	public static readonly RULE_jLine = 32;
	public static readonly RULE_jString = 33;
	public static readonly RULE_jAsciiChar = 34;
	public static readonly RULE_jProc = 35;
	public static readonly RULE_jStdProc = 36;
	public static readonly RULE_jNewProc = 37;
	public static readonly RULE_jProcColumn = 38;
	public static readonly RULE_jOrderColumn = 39;
	public static readonly RULE_jProcUpdateByColumn = 40;
	public static readonly RULE_jComment = 41;
	public static readonly RULE_jRowCount = 42;
	public static readonly RULE_jUserProc = 43;
	public static readonly RULE_jOptSize = 44;
	public static readonly RULE_jInputType = 45;
	public static readonly RULE_jOutputType = 46;
	public static readonly RULE_jOldData = 47;
	public static readonly RULE_jNewData = 48;
	public static readonly RULE_jIdlCode = 49;
	public static readonly RULE_jOldCode = 50;
	public static readonly RULE_jOldViewCode = 51;
	public static readonly RULE_jNewCode = 52;
	public static readonly RULE_jNewViewCode = 53;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"jInput", "jConnect", "jPackageIdent", "jIdentOrString", "jIdent", "jTables", 
		"jTableImport", "jTable", "jPackageField", "jField", "jAlias", "jDatatype", 
		"jLookup", "jEnumValue", "jFloatsize", "jEnumChar", "jCharsize", "jCharList", 
		"jNumber", "jParm", "jExtras", "jConst", "jGrant", "jPermission", "jUser", 
		"jKey", "jModifier", "jColumn", "jLink", "jLinkColumn", "jView", "jViewAlias", 
		"jLine", "jString", "jAsciiChar", "jProc", "jStdProc", "jNewProc", "jProcColumn", 
		"jOrderColumn", "jProcUpdateByColumn", "jComment", "jRowCount", "jUserProc", 
		"jOptSize", "jInputType", "jOutputType", "jOldData", "jNewData", "jIdlCode", 
		"jOldCode", "jOldViewCode", "jNewCode", "jNewViewCode",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, "'@'", "':'", "','", "'='", 
		"'{'", "'['", "'('", "'};'", "']'", "')'", "';'", undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, "'.'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "BLOCK_COMMENT", "LINE_COMMENT", "WHITE_SPACE", "ALL", "ANSICHAR", 
		"AS", "AUTOTIMESTAMP", "BIGIDENTITY", "BIGSEQUENCE", "BIGXML", "BLOB", 
		"BOOLEAN", "BULKINSERT", "BULKUPDATE", "BYTE", "CALC", "CASCADE", "CHAR", 
		"CHECK", "COUNT", "CONST", "CURSOR", "DATABASE", "DATE", "DATETIME", "DECLARE", 
		"DEFAULTV", "DELETE", "DELETEBY", "DELETEALL", "DELETEONE", "DESC", "DOUBLE", 
		"DYNAMIC", "EXECUTE", "EXISTS", "FLAGS", "FLOAT", "FOR", "GRANT", "IDENTITY", 
		"IMPORT", "IN", "INOUT", "INPUT", "INSERT", "INT", "KEY", "LINK", "LONG", 
		"MERGE", "MONEY", "MULTIPLE", "NAMES", "NOT", "NULL", "OPTIONS", "ORDER", 
		"OUTPUT", "PACKAGE", "PASSWORD", "PRIMARY", "PROC", "READONLY", "RETURNING", 
		"SCHEMA", "SELECT", "SELECTALL", "SELECTBY", "FROM", "WHERE", "SELECTONEBY", 
		"SELECTONE", "SEQUENCE", "SERVER", "SHORT", "SINGLE", "SQL", "SPROC", 
		"STANDARD", "TABLE", "TIME", "TIMESTAMP", "TLOB", "TO", "UID", "UNIQUE", 
		"UPDATE", "UPDATEFOR", "UPDATEBY", "MAXTMSTAMP", "USERID", "USERSTAMP", 
		"UTF8", "VIEW", "WANSICHAR", "WCHAR", "XML", "PARM", "PARMSHOWS", "PARMVIEWONLY", 
		"PARMCACHE", "PARMREADER", "PARMINSERT", "PARMDELETE", "PARMUPDATE", "PARMSUPPLIED", 
		"COMMENT", "ATSIGN", "COLON", "COMMA", "EQUALS", "LEFTBRACE", "LEFTBRACK", 
		"LEFTPAREN", "RIGHTBRACE", "RIGHTBRACK", "RIGHTPAREN", "SEMICOLON", "NUMBER", 
		"STRING", "DQUOTEDS", "SQUOTEDS", "IDENTIFIER", "LIDENTIFIER", "LETTER", 
		"DIGIT", "EXTRA", "LITERAL", "POINT", "SQLCODE", "SQLDATA", "IDLCODE", 
		"CODE", "DATA", "ENDCODE", "ENDDATA", "CODELINE",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(siParser._LITERAL_NAMES, siParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return siParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "siParser.g4"; }

	// @Override
	public get ruleNames(): string[] { return siParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return siParser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(siParser._ATN, this);
	}
	// @RuleVersion(0)
	public jInput(): JInputContext {
		let _localctx: JInputContext = new JInputContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, siParser.RULE_jInput);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 108;
			this.match(siParser.DATABASE);
			this.state = 109;
			this.jIdent();
			this.state = 118;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === siParser.FLAGS) {
				{
				{
				this.state = 110;
				this.match(siParser.FLAGS);
				this.state = 112;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				do {
					{
					{
					this.state = 111;
					this.jString();
					}
					}
					this.state = 114;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				} while (_la === siParser.STRING);
				}
				}
				this.state = 120;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 123;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === siParser.PACKAGE) {
				{
				this.state = 121;
				this.match(siParser.PACKAGE);
				this.state = 122;
				this.jPackageIdent();
				}
			}

			this.state = 133;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === siParser.IMPORT || _la === siParser.OUTPUT) {
				{
				{
				this.state = 129;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case siParser.OUTPUT:
					{
					this.state = 125;
					this.match(siParser.OUTPUT);
					this.state = 126;
					this.jIdentOrString();
					}
					break;
				case siParser.IMPORT:
					{
					this.state = 127;
					this.match(siParser.IMPORT);
					this.state = 128;
					this.jIdentOrString();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				this.state = 135;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 136;
			this.jConnect();
			this.state = 138;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 137;
				this.jTables();
				}
				}
				this.state = 140;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la === siParser.IMPORT || _la === siParser.TABLE);
			this.state = 145;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === siParser.VIEW) {
				{
				{
				this.state = 142;
				this.jView();
				}
				}
				this.state = 147;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 148;
			this.match(siParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public jConnect(): JConnectContext {
		let _localctx: JConnectContext = new JConnectContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, siParser.RULE_jConnect);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 150;
			this.match(siParser.SERVER);
			this.state = 151;
			this.jIdentOrString();
			this.state = 154;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === siParser.SCHEMA) {
				{
				this.state = 152;
				this.match(siParser.SCHEMA);
				this.state = 153;
				this.jIdentOrString();
				}
			}

			this.state = 161;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === siParser.USERID) {
				{
				this.state = 156;
				this.match(siParser.USERID);
				this.state = 157;
				this.jIdent();
				this.state = 158;
				this.match(siParser.PASSWORD);
				this.state = 159;
				this.jIdent();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public jPackageIdent(): JPackageIdentContext {
		let _localctx: JPackageIdentContext = new JPackageIdentContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, siParser.RULE_jPackageIdent);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 163;
			this.jIdent();
			this.state = 168;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === siParser.POINT) {
				{
				{
				this.state = 164;
				this.match(siParser.POINT);
				this.state = 165;
				this.jIdent();
				}
				}
				this.state = 170;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public jIdentOrString(): JIdentOrStringContext {
		let _localctx: JIdentOrStringContext = new JIdentOrStringContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, siParser.RULE_jIdentOrString);
		try {
			this.state = 173;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case siParser.IDENTIFIER:
			case siParser.LIDENTIFIER:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 171;
				this.jIdent();
				}
				break;
			case siParser.STRING:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 172;
				this.match(siParser.STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public jIdent(): JIdentContext {
		let _localctx: JIdentContext = new JIdentContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, siParser.RULE_jIdent);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 175;
			_la = this._input.LA(1);
			if (!(_la === siParser.IDENTIFIER || _la === siParser.LIDENTIFIER)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}
